# PythonProjects

./: FoodDice  FoodDice.py  LottoNumberPicker  LottoNumberPicker.py  NewsletterCreator.py  README.md  UserMenu  WebScrap.py  Win11_Security_BP.py  controller.py  main_page.html  models.py  predict.py  shodanAPI.py
CS_Falcon/: block_ip.py  create_detection_rule.py  endpointList.py  quarantine_file_endpoint.py
Chatbot/: .gitignore  database.py  trainning_dataset.py
CrowdStrike Falcon/: endpointList.py
CyberSecBreach/: .gitignore  Pipfile  README.md  requirements.txt
DomainTool/: .gitignore  main.py  (+9 more)
GeoAsk/: .env.example  .gitignore  Dockerfile  README.md  demo_access_gap.py  docker-compose.yml  pyproject.toml  requirements.txt
GeoAsk/app/: data_access.py  db.py  main.py  schemas.py
GeoAsk/app/orchestration/: __init__.py  demo.py  layers.py  llm.py  orchestrator.py  sources.py  tools.py
GeoAsk/app/routers/: ask.py  primitives.py
GeoAsk/app/spatial/: __init__.py  buffer.py  demographic_overlay.py  filter_by_attribute.py  geo.py  isochrone.py  nearest.py  routing.py  spatial_join.py
GeoAsk/app/web/: app.js  index.html  styles.css
GeoAsk/data/: README.md  load.py
GeoAsk/evals/: README.md  audit.py  ground_truth.py  phrasings.py  run.py
GeoAsk/sql/: schema.sql
GeoAsk/tests/: conftest.py  test_api.py  test_audit.py  test_buffer.py  test_data_access.py  test_demographic_overlay.py  test_filter_by_attribute.py  test_frontend.py  test_isochrone.py  test_nearest.py  test_orchestration.py  test_phrasings.py  test_postgis_integration.py  test_spatial_join.py
(+77 files in other folders)
